# docker-update-monitor

./: .coverage  .env.example  .gitignore  Cargo.toml  Dockerfile  MIGRATION_PLAN.md  README.md  docker-compose.yml  monitor.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  rust-toolchain.toml
.github/: copilot-instructions.md  dependabot.yml
app/: config.py  cooldown.py  dashboard.py  health.py  healthcheck.py  http.py  main.py  metrics.py  migrations.py  models.py  scanner.py  state.py  version.py
src/: config.rs  cooldown.rs  health.rs  http.rs  lib.rs  main.rs  metrics.rs  migrations.rs  models.rs  scanner.rs  scheduler.rs  server.rs  state.rs  version.rs
templates/: index.html
tests/: conftest.py  test_arch_check.py  test_arch_check.rs  test_config.py  test_dashboard.py  test_dashboard_integration.py  test_detect_registry.py  test_detect_registry.rs  test_digest_detection.py  test_digest_detection.rs  test_email.rs  test_email_notifications.py  test_find_updates.py  test_find_updates.rs  test_graceful_shutdown.py  test_health.py  test_healthcheck.py  test_http_session.py  test_image_parsing.py  test_metrics.py  test_migrations.py  test_migrations.rs  test_notifications.py  test_notifications_telegram.py  test_parse_cooldown.py  test_parse_cooldown.rs  test_parse_tag.py  test_parse_tag.rs  test_regex_validation.py  test_registry.py  test_registry_dockerhub.rs  test_registry_ghcr.rs  test_registry_manifest.rs  test_requirements_locked.py  test_run_check.py  test_run_on_startup.py  test_scanner.rs  test_server.rs  (+6 more)
(+34 files in other folders)
